# jedi-trials

./: .gitignore  README.md  all_run.sh  clean.bat  clean.sh  config.yaml  dclean.sh  err_file.txt  requirements.txt  run.bat  run.sh  runtime.txt  tmp.py
ICP/pcl test/: CMakeLists.txt  cloud_viewer.cpp  old_CMakeLists.txt  typedefs.h
ICP/pcl test/PCL-1.12.1/cmake/: PCLConfig.cmake  PCLConfigVersion.cmake
ICP/pcl test/PCL-1.12.1/include/pcl-1.12/pcl/: pcl_config.h
ICP/pcl test/PCL-1.12.1/include/pcl-1.12/pcl/features/: feature.h  normal_3d.h
ICP/pcl test/PCL-1.12.1/include/pcl-1.12/pcl/registration/: correspondence_estimation.h  icp.h
ICP/pcl test/PCL-1.12.1/lib/pkgconfig/: pcl_2d-1.12.pc  pcl_common-1.12.pc  pcl_features-1.12.pc  pcl_filters-1.12.pc  pcl_geometry-1.12.pc  pcl_io-1.12.pc  pcl_kdtree-1.12.pc  pcl_keypoints-1.12.pc  pcl_ml-1.12.pc  pcl_octree-1.12.pc  pcl_outofcore-1.12.pc  pcl_people-1.12.pc  pcl_recognition-1.12.pc  pcl_registration-1.12.pc  pcl_sample_consensus-1.12.pc  pcl_search-1.12.pc  pcl_segmentation-1.12.pc  pcl_stereo-1.12.pc  pcl_surface-1.12.pc  pcl_tracking-1.12.pc  pcl_visualization-1.12.pc
ICP/pcl test/PCL-1.12.1/share/doc/pcl-1.12/advanced/html/: .buildinfo  c_cache.html  compiler_optimizations.html  distcc.html  exceptions_guide.html  genindex.html  how_to_write_a_tutorial.html  index.html  minimal_example.html  objects.inv  pcl2.html  pcl_reg_eval.html  pcl_registration.html  pcl_style_guide.html  roadmap.html  search.html  searchindex.js  single_compile_unit.html  vertical_sse.html
ICP/pcl test/PCL-1.12.1/share/doc/pcl-1.12/tutorials/html/: .buildinfo  adding_custom_ptype.html  alignment_prerejective.html  basic_structures.html  benchmark.html  benchmark_filters.html  bspline_fitting.html  building_pcl.html  cloud_viewer.html  cluster_extraction.html  compiling_pcl_dependencies_windows.html  compiling_pcl_macosx.html  compiling_pcl_posix.html  compiling_pcl_windows.html  compression.html  concatenate_clouds.html  concatenate_fields.html  concatenate_points.html  conditional_euclidean_clustering.html  conditional_removal.html  convex_hull_2d.html  correspondence_grouping.html  cylinder_segmentation.html  davidsdk.html  depth_sense_grabber.html  dinast_grabber.html  don_segmentation.html  ensenso_cameras.html  extract_indices.html  fpfh_estimation.html  function_filter.html  gasd_estimation.html  generate_local_doc.html  genindex.html  global_hypothesis_verification.html  gpu_install.html  gpu_people.html  (+67 more)
ICP/pcl test/include/: dirent.h  modules.h  typedefs.h
ICP/pcl test/src/: pc_pipeline.cpp  utils.cpp
KNN/: knn  (+2 more)
optimization/HarmonicMap/: CMakeLists.txt  main.cc
optimization/HarmonicMap/harmonic_map/: CMakeLists.txt
optimization/HarmonicMap/harmonic_map/include/: HarmonicMap.h
optimization/HarmonicMap/harmonic_map/src/: HarmonicMap.cpp  Viewer.cpp  main.cc
registration/: CMakeLists.txt  icp_pipeline.cc  utils.cc
registration/include/: dirent.h  typedefs.h  utils.h
registration/src/: pcd_write.cc  utils.cc
(+270 files in other folders)
